--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "test": "npx hardhat test",
     "test:gas": "REPORT_GAS=true npm run test",
     "lint": "npx solhint contracts/*",
-    "deploy": "npx hardhat run scripts/deploy.ts"
+    "deploy": "npx hardhat run scripts/deploy.ts",
+    "generate-types": "typechain --target=ethers-v5 'artifacts/contracts/game.sol/RPGGame.json' --out-dir=frontend/abi",
+    "docs": "solidity-docgen --solc-module solc-0.8"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -42,5 +46,11 @@
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "solidity-docgen": "0.5.17",
+    "solc-0.8": "npm:solc@0.8.16"
   }
 }
