--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.7",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-etherscan": "3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.20.0",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.22",
@@ -36,7 +37,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.1.1",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.1",
+    "ethers": "^5.7.0",
     "hardhat": "^2.6.7",
     "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.4.1",
@@ -49,8 +50,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@walletconnect/web3-provider": "^1.8.0",
-    "solidity-docgen": "0.5.17",
-    "solc-0.8": "npm:solc@0.8.16"
+    "solc-0.8": "npm:solc@0.8.16",
+    "solidity-docgen": "0.5.17"
   }
 }
